# pad

./: LICENSE  README.md
source/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  manager.pro  manager.qrc
